Remove yarn and lerna in favor of npm

--- a/sites/website/versioned_docs/version-1.x/components/fast-combobox.mdx
+++ b/sites/website/versioned_docs/version-1.x/components/fast-combobox.mdx
@@ -84,7 +84,7 @@ This component is built with the expectation that focus is delegated to the inpu
 
 ### Option
 
-See [listbox-option](/docs/components/listbox-option) for more information.
+See [listbox-option](./fast-listbox-option.mdx) for more information.
 
 ## API
 
