--- a/sites/website/versioned_docs/version-1.x/components/fast-listbox-option.mdx
+++ b/sites/website/versioned_docs/version-1.x/components/fast-listbox-option.mdx
@@ -10,7 +10,7 @@ keywords:
 
 An implementation of an [option](https://w3c.github.io/aria/#option). To avoid namespace collisions with the [Option() constructor](https://developer.mozilla.org/en-US/docs/Web/API/HTMLOptionElement/Option), the component class is `ListboxOption`, and our implementation is named `fast-option`.
 
-The `<fast-option>` component will only provide internals related to form association when used within a form-associated component such as [`fast-select`](/docs/components/select) or [`fast-combobox`](/docs/components/combobox). It will not provide these capabilities when used only with a [`fast-listbox`](/docs/components/listbox).
+The `<fast-option>` component will only provide internals related to form association when used within a form-associated component such as [`fast-select`](./fast-select.mdx) or [`fast-combobox`](./fast-combobox.mdx). It will not provide these capabilities when used only with a [`fast-listbox`](./fast-listbox.mdx).
 
 ## Setup
 
@@ -28,7 +28,7 @@ provideFASTDesignSystem()
 
 ## Usage
 
-See [`fast-select`](/docs/components/select), [`fast-combobox`](/docs/components/combobox), or [`fast-listbox`](/docs/components/listbox).
+See [`fast-select`](./fast-select.mdx), [`fast-combobox`](./fast-combobox.mdx), or [`fast-listbox`](./fast-listbox.mdx).
 
 ## Create your own design
 
