--- a/sites/website/versioned_docs/version-1.x/components/fast-listbox.mdx
+++ b/sites/website/versioned_docs/version-1.x/components/fast-listbox.mdx
@@ -8,9 +8,9 @@ keywords:
     - listbox
 ---
 
-An implementation of a [listbox](https://www.w3.org/TR/wai-aria-practices-1.2/#Listbox). While any DOM content is permissible as a child of the listbox, only [`fast-option`](/docs/components/listbox-option) elements, `option` elements, and slotted items with `role="option"` will be treated as options and receive keyboard support.
+An implementation of a [listbox](https://www.w3.org/TR/wai-aria-practices-1.2/#Listbox). While any DOM content is permissible as a child of the listbox, only [`fast-option`](./fast-listbox-option.mdx) elements, `option` elements, and slotted items with `role="option"` will be treated as options and receive keyboard support.
 
-The `listbox` component has no internals related to form association. For a form-associated `listbox`, see the [`fast-select` component](/docs/components/select).
+The `listbox` component has no internals related to form association. For a form-associated `listbox`, see the [`fast-select` component](./fast-select.mdx).
 
 ## Setup
 
@@ -56,7 +56,7 @@ export const myListbox = Listbox.compose({
 
 ### Option
 
-See [listbox-option](/docs/components/listbox-option) for more information.
+See [listbox-option](./fast-listbox-option.mdx) for more information.
 
 ## API
 
