--- a/sites/website/versioned_docs/version-1.x/components/fast-radio.mdx
+++ b/sites/website/versioned_docs/version-1.x/components/fast-radio.mdx
@@ -55,7 +55,7 @@ provideFASTDesignSystem()
 
 :::note
 
-For a more ergonomic usage of radios in groups, see [the `fast-radio-group` documentation](/docs/components/radio-group).
+For a more ergonomic usage of radios in groups, see [the `fast-radio-group` documentation](./fast-radio-group.mdx).
 
 :::
 
