--- a/sites/website/versioned_docs/version-1.x/components/fast-select.mdx
+++ b/sites/website/versioned_docs/version-1.x/components/fast-select.mdx
@@ -74,7 +74,7 @@ export const mySelect = Select.compose<SelectOptions>({
 
 ### Option
 
-See [listbox-option](/docs/components/listbox-option) for more information.
+See [listbox-option](./fast-listbox-option.mdx) for more information.
 
 ## API
 
